[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UI/Menu/Options.gd" type="Script" id=1]
[ext_resource path="res://src/UI/Menu/Buttons/FullscreenToggle.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/Menu/Buttons/ReturnButton.tscn" type="PackedScene" id=3]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterRow" type="VBoxContainer" parent="."]
margin_left = 210.0
margin_top = 40.0
margin_right = 430.0
margin_bottom = 320.0

[node name="FullscreenToggle" parent="CenterRow" instance=ExtResource( 2 )]

[node name="CheckBox" parent="CenterRow/FullscreenToggle" index="1"]
margin_left = 86.0
margin_right = 110.0

[node name="VIDEOLabel" type="Label" parent="CenterRow"]
margin_top = 28.0
margin_right = 220.0
margin_bottom = 59.0
text = "Resolution: YES
"

[node name="AUDIOLabel" type="Label" parent="CenterRow"]
margin_top = 63.0
margin_right = 220.0
margin_bottom = 111.0
text = "Music: <------------------------------->
SFX:     <------------------------------->
"

[node name="Label" type="Label" parent="CenterRow"]
margin_top = 115.0
margin_right = 220.0
margin_bottom = 231.0
text = "Control with WASD
Spacebar jumps
Q and E activates the gadgets
Left Click fires bullets
Right Click fires the hook
Shift, V or F uses the Melee attack
"

[node name="Return" parent="CenterRow" instance=ExtResource( 3 )]
margin_top = 235.0
margin_right = 220.0
margin_bottom = 255.0
[connection signal="pressed" from="CenterRow/FullscreenToggle/CheckBox" to="." method="_on_Fullcreen_CheckBox_pressed"]
[connection signal="pressed" from="CenterRow/Return" to="." method="_on_Return_pressed"]

[editable path="CenterRow/FullscreenToggle"]
